--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
-    "@nestjs/typeorm": "^11.0.0",
     "@prisma/client": "^6.14.0",
     "axios": "^1.11.0",
     "class-transformer": "^0.5.1",
@@ -43,7 +42,6 @@
     "qrcode-reader": "^1.0.4",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
-    "typeorm": "^0.3.25",
     "ulid": "^3.0.1",
     "uuid": "^11.1.0"
   },
@@ -69,9 +67,12 @@
     "supertest": "^7.0.0",
     "ts-jest": "^29.1.0",
     "ts-loader": "^9.4.3",
-    "ts-node": "^10.9.1",
+    "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.1.3"
+  },
+  "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   },
   "jest": {
     "moduleFileExtensions": [
