--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "qrcode": "^1.5.4",
     "qrcode-reader": "^1.0.4",
     "reflect-metadata": "^0.2.0",
+    "resend": "^6.0.2",
     "rxjs": "^7.8.1",
     "ulid": "^3.0.1",
     "uuid": "^11.1.0",
